--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "D-r Arabadjikova WebApp",
+  "name": "DrArabadjikovaWebApp",
   "version": "0.0.1",
   "description": "Deployment package for D-r Arabadjikova WebApp",
   "main": "index.js",
