--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,11 @@ deploy:
   on:
     repo: mbelianov/AG-WebApp
     tags: true
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  bucket: webapp-pre.arabadjikova.com
+  local-dir: src
+  acl: public_read
+  on:
+    repo: mbelianov/AG-WebApp
