--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,20 @@ language: node_js
 node_js:
 - node
 deploy:
-  provider: s3
-  access_key_id: $AWS_ACCESS_KEY_ID
-  secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: webapp.arabadjikova.com
-  local-dir: src
-  acl: public_read
-  on:
-    repo: mbelianov/AG-WebApp
-    tags: true
-  provider: s3
-  access_key_id: $AWS_ACCESS_KEY_ID
-  secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: webapp-pre.arabadjikova.com
-  local-dir: src
-  acl: public_read
-  on:
-    repo: mbelianov/AG-WebApp
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
+    bucket: webapp.arabadjikova.com
+    local-dir: src
+    acl: public_read
+    on:
+      repo: mbelianov/AG-WebApp
+      tags: true
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
+    bucket: webapp-pre.arabadjikova.com
+    local-dir: src
+    acl: public_read
+    on:
+      repo: mbelianov/AG-WebApp
